--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
  </head>
  <body>
      <header>
-     <h1>Oswal Gonzalez</h1>
+     <h1>Oswal Gonzalez's IT121 Portal</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="https://ozzygx.github.io/time-of-day/index.html" target="_blank">Time of Day</a>
             <a href="https://1drv.ms/w/s!AnExy2gZZWP7tjt79Wa92DAM3jra?e=0EOtDj" target="https://1drv.ms/w/s!AnExy2gZZWP7tjt79Wa92DAM3jra?e=0EOtDj">Career Networking White Paper</a>
             <a href="https://kamerynbatingan.github.io/cyber-security-jobs/index.html" target="https://kamerynbatingan.github.io/cyber-security-jobs/index.html">Cyber Security Webpage</a>
             <a href="https://docs.google.com/document/d/1Jr6DBZ-J_C4G0XBkLTdEa9gFWJYUPeIruPSy6Lh30q0/edit?usp=sharing" target="https://docs.google.com/document/d/1Jr6DBZ-J_C4G0XBkLTdEa9gFWJYUPeIruPSy6Lh30q0/edit?usp=sharing">V2 Git Essentials Training The Basics</a>
