--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
  <body>
      <header>
-     <h1>Oswal Gonzalez's IT121 Portal</h1>
+     <h1>Oswal Gonzalez's IT121 class portal</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="https://ozzygx.github.io/time-of-day/index.html" target="_blank">Time of Day</a>
